# tractus

./: .env.example  .gitignore  README.md  pyproject.toml
src/tractus/: __init__.py  app.py  cli.py  config.py  llm.py
src/tractus/flask/: __init__.py  app.py
src/tractus/flask/swagger/: chat.yml
src/tractus/model/: __init__.py  openai.py
src/tractus/swagger/: health.yml
src/tractus/tools/: __init__.py  cli.py  doc_convert.py  web_extract.py  web_search.py
